Reports has been updated  to the new database structure

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,8 @@ PORT=3000
 
 DB_NAME_TEST=test_cursalab_v2
 
-CARPETA_GESTOR=gestor
-CARPETA_GESTOR_TEST=test_gestor
+CARPETA_DESCARGA=RUTA_ABSOLUTA
+CARPETA_DESCARGA_TEST=RUTA_ABSOLUTA
 
-CARPETA_DESCARGA=/public/reportes/
+NODE_ENV=debug
 
-NODE_ENV=production
