Installed package to log - getWorkspaceCriteria function was modified

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-queue": "0.0.12",
     "knex": "^0.21.16",
     "lodash": "^4.17.21",
+    "log4js": "^6.7.0",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
