--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "exceljs": "^4.3.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-queue": "0.0.12",
     "knex": "^0.21.16",
     "lodash": "^4.17.21",
@@ -17,7 +17,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "node-cron": "2.0.3",
-    "sequelize": "^6.12.2"
+    "sequelize": "^6.12.2",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
