--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mysql2": "^2.1.0",
     "node-cron": "2.0.3",
     "sequelize": "^6.12.2",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "@aws-sdk/client-s3": "^3.319.0",
+    "@aws-sdk/s3-request-presigner": "^3.319.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
