--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Servicio de reportes para cursalab_v2",
   "main": "index.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.319.0",
+    "@aws-sdk/s3-request-presigner": "^3.319.0",
     "axios": "^1.2.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -20,9 +22,7 @@
     "mysql2": "^2.1.0",
     "node-cron": "2.0.3",
     "sequelize": "^6.12.2",
-    "socket.io": "^4.5.4",
-    "@aws-sdk/client-s3": "^3.319.0",
-    "@aws-sdk/s3-request-presigner": "^3.319.0"
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
