--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-queue": "0.0.12",
+    "file-saver": "^2.0.5",
     "html-entities": "^2.4.0",
     "knex": "^0.21.16",
     "lodash": "^4.17.21",
