--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-queue": "0.0.12",
+    "handlebars": "^4.7.8",
     "html-entities": "^2.4.0",
     "knex": "^0.21.16",
     "lodash": "^4.17.21",
@@ -22,7 +23,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "node-cron": "2.0.3",
-    "pdf-master": "^1.1.0",
+    "puppeteer": "^22.1.0",
     "sequelize": "^6.12.2",
     "socket.io": "^4.5.4"
   },
